<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MontaMega</string>
    <string name="title_section1">Generate Mega</string>
    <string name="title_section2">Save / Made</string>
    <string name="jogo">Game</string>
    <string name="mega">Mega</string>
    <string name="Salvar">Save</string>
    <string name="last_results">Last Results</string>
    <string name="title">Title</string>
    <string name="about">About</string>
    <string name="title_activity_about">About - MontaMega</string>
    <string name="version">Version 1.0</string>
    <string name="objective">MontaMega aims to help you in choosing your lucky numbers! If you win, do not forget me :)</string>
    <string name="tutorial">Generate Mega</string>
    <string name="tab_mega"> - Generates a random number</string>
    <string name="tab_mega_um"> - Save in your favorites</string>
    <string name="tab_favorits">Saved</string>
    <string name="tab_favorits_um">List of your last saved / made ​​games.</string>
    <string name="developer">Developer</string>
    <string name="myname">Abner Terribili</string>
    <string name="mymail">abner.terribili@gmail.com</string>
    <string name="saved_game">Game Saved</string>
    <string name="error_to_save">Error to Save</string>
    <string name="game_of_mega">Game of Mega</string>
    <string name="work_with_last_results">Generates a sequence of numbers according to the latest results of Mega</string>
    <string name="copy_game">Copy Game</string>
    <string name="share_game">Share Game</string>
    <string name="delete_game">Remove Game</string>
    <string name="remove">Removed</string>
    <string name="this_mgame">This is my game of Mega :</string>
    <string name="copy">Text cop</string>

    <string-array name="array_options">
        <item>Biggest</item>
        <item>Smaller</item>
    </string-array>

</resources>