<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtJogo"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:editable="false"
        android:text="@string/jogo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edTxtMega"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtJogo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:editable="false"
        android:enabled="false"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20dp"
        android:textStyle="normal" />

    <Switch
        android:id="@+id/swResults"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edTxtMega"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/Resultados"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btMega"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/swResults"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/pressed_background_example"
        android:text="@string/mega"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/btMega"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@+id/btMega"
        android:background="@drawable/pressed_background_example"
        android:text="@string/Salvar"
        android:textSize="16dp" />

</RelativeLayout>